--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^8.0.4",
-    "react-router-dom": "^6.4.5",
+    "react-router-dom": "^6.5.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^3.1.0"
   },
@@ -26,7 +26,15 @@
       "eslint:recommended",
       "plugin:react/recommended",
       "plugin:prettier/recommended"
-    ]
+    ],
+    "rules": {
+      "prettier/prettier": [
+        "error",
+        {
+          "endOfLine": "auto"
+        }
+      ]
+    }
   },
   "browserslist": {
     "production": [
